--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -74,22 +74,39 @@
       </article>
     </section>
 
-   <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
-<section class="products-section">
-  <article class="product-info-card">
-    <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-    <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
-    <ul>
-      <li>개인정보 입력 <strong>NO</strong></li>
-      <li>신용점수영향 <strong>NO</strong></li>
-      <li>간단한 정보로도 <strong>OK</strong></li>
-      <li>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</li>
-    </ul>
-    <div class="product-card__buttons" style="margin-top:8px;">
-      <a href="/" class="product-btn">바로가기</a>
-    </div>
-  </article>
-</section>
+      <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <section class="products-section">
+      <div class="calculator-section-grid">
+        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <article class="product-info-card calculator-card">
+          <div class="calculator-card__inner">
+            <div class="calculator-card__text">
+              <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+              <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
+              <ul>
+                <li>개인정보 입력 <strong>NO</strong></li>
+                <li>신용점수영향 <strong>NO</strong></li>
+                <li>간단한 정보로도 <strong>OK</strong></li>
+                <li>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</li>
+              </ul>
+            </div>
+
+            <div class="calculator-card__action">
+              <div class="product-card__buttons">
+                <a href="/" class="product-btn product-btn--calculator">바로가기</a>
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <!-- 오른쪽: 실제 대출사례 영역 (내용은 나중에 채우기) -->
+        <article class="product-info-card">
+          <h2 class="products-section__title">실제 대출사례를 확인하세요</h2>
+          <!-- TODO: 네이버 블로그 실제 대출사례 내용 / 링크 추가 예정 -->
+        </article>
+      </div>
+    </section>
+
 
     <!-- 1. 상세안내 -->
     <section class="products-section">
