--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -74,40 +74,42 @@
       </article>
     </section>
 
-      <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+         <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
         <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
         <article class="product-info-card calculator-card">
-          <div class="calculator-card__inner">
-            <div class="calculator-card__text">
-              <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-              <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
-              <ul>
-                <li>개인정보 입력 <strong>NO</strong></li>
-                <li>신용점수영향 <strong>NO</strong></li>
-                <li>간단한 정보로도 <strong>OK</strong></li>
-                <li>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</li>
-              </ul>
-            </div>
-
-            <div class="calculator-card__action">
+          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
+          <ul>
+            <li>개인정보 입력 <strong>NO</strong></li>
+            <li>신용점수영향 <strong>NO</strong></li>
+            <li>간단한 정보로도 <strong>OK</strong></li>
+            <li class="calculator-last-li">
+              <span>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</span>
               <div class="product-card__buttons">
                 <a href="/" class="product-btn product-btn--calculator">바로가기</a>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </article>
 
-        <!-- 오른쪽: 실제 대출사례 영역 (내용은 나중에 채우기) -->
-        <article class="product-info-card">
-          <h2 class="products-section__title">실제 대출사례를 확인하세요</h2>
-          <!-- TODO: 네이버 블로그 실제 대출사례 내용 / 링크 추가 예정 -->
+        <!-- 오른쪽: 실제 대출 사례 안내 -->
+        <article class="product-info-card calculator-extra-card">
+          <h2 class="products-section__title">실제 대출 사례를 확인하세요</h2>
+          <p class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</p>
+          <p class="calculator-extra-text">
+            후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
+            나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
+          </p>
+          <div class="product-card__buttons calculator-extra-action">
+            <!-- TODO: href에 실제 네이버 블로그 주소 입력 -->
+            <a href="#" class="product-btn">바로가기</a>
+          </div>
         </article>
       </div>
     </section>
-
-
+      
     <!-- 1. 상세안내 -->
     <section class="products-section">
       <h2 class="products-section__title">1. 상세안내</h2>
