--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -94,21 +94,22 @@
           </ul>
         </article>
 
-        <!-- 오른쪽: 실제 대출 사례 안내 -->
+             <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 대출 사례를 확인하세요</h2>
           <p class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</p>
-          <p class="calculator-extra-text">
-            후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
-            나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
-          </p>
-          <div class="product-card__buttons calculator-extra-action">
-            <!-- TODO: href에 실제 네이버 블로그 주소 입력 -->
-            <a href="#" class="product-btn">바로가기</a>
+
+          <div class="calculator-extra-text-row">
+            <p class="calculator-extra-text">
+              후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
+              나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
+            </p>
+            <div class="product-card__buttons">
+              <!-- TODO: href에 실제 네이버 블로그 주소 입력 -->
+              <a href="#" class="product-btn">바로가기</a>
+            </div>
           </div>
         </article>
-      </div>
-    </section>
       
     <!-- 1. 상세안내 -->
     <section class="products-section">
