--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -74,7 +74,7 @@
       </article>
     </section>
 
-         <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
         <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
@@ -94,7 +94,7 @@
           </ul>
         </article>
 
-             <!-- 오른쪽: 실제 대출 사례 안내 -->
+        <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 대출 사례를 확인하세요</h2>
           <p class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</p>
@@ -110,7 +110,9 @@
             </div>
           </div>
         </article>
-      
+      </div>
+    </section>
+
     <!-- 1. 상세안내 -->
     <section class="products-section">
       <h2 class="products-section__title">1. 상세안내</h2>
