--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -93,6 +93,8 @@
             </li>
           </ul>
         </article>
+         </div>
+        </section>
 
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
