--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -93,13 +93,11 @@
             </li>
           </ul>
         </article>
-         </div>
-        </section>
 
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 대출 사례를 확인하세요</h2>
-          <H3 class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</H3>
+          <h3 class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</h3>
 
           <div class="calculator-extra-text-row">
             <p class="calculator-extra-text">
@@ -107,7 +105,7 @@
               나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
             </p>
             <div class="product-card__buttons">
-              <!-- TODO: href에 실제 네이버 블로그 주소 입력 -->
+              <!-- TODO: 실제 블로그 주소로 교체 -->
               <a href="#" class="product-btn">바로가기</a>
             </div>
           </div>
