--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -96,7 +96,7 @@
 
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
-          <h2 class="products-section__title">실제 대출 사례를 확인하세요</h2>
+          <h2 class="products-section__title">실제 대출 사례를 확인하세요.</h2>
           <h3 class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</h3>
 
           <div class="calculator-extra-text-row">
