--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -99,16 +99,16 @@
           <h2 class="products-section__title">실제 대출 사례를 확인하세요.</h2>
           <h3 class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</h3>
 
-          <div class="calculator-extra-text-row">
-            <p class="calculator-extra-text">
-              후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
-              나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
-            </p>
-            <div class="product-card__buttons">
-              <!-- TODO: 실제 블로그 주소로 교체 -->
-              <a href="#" class="product-btn">바로가기</a>
-            </div>
-          </div>
+<div class="calculator-last-line">
+  <p class="calculator-extra-text">
+    후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
+    나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
+  </p>
+  <div class="product-card__buttons">
+    <!-- TODO: 실제 블로그 주소로 교체 -->
+    <a href="#" class="product-btn">바로가기</a>
+  </div>
+</div>
         </article>
       </div>
     </section>
