--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -75,7 +75,7 @@
           </p>
 
           <!-- 해시태그 영역 -->
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span class="product-tag">#아파트대출</span>
             <span class="product-tag">#아파트담보대출</span>
             <span class="product-tag">#아파트지분대출</span>
@@ -120,7 +120,7 @@
           </p>
 
           <!-- 해시태그 -->
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span class="product-tag">#빌라대출</span>
             <span class="product-tag">#빌라담보대출</span>
             <span class="product-tag">#빌라지분대출</span>
@@ -166,7 +166,7 @@
           </p>
 
           <!-- 해시태그 -->
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span class="product-tag">#단독주택대출</span>
             <span class="product-tag">#단독주택담보대출</span>
             <span class="product-tag">#단독주택지분대출</span>
@@ -208,7 +208,7 @@
           </p>
 
           <!-- 해시태그 -->
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span class="product-tag">#토지담보대출</span>
             <span class="product-tag">#토지지분대출</span>
             <span class="product-tag">#임야대출</span>
@@ -245,7 +245,7 @@
           </p>
 
           <!-- 해시태그 -->
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span class="product-tag">#상가담보대출</span>
             <span class="product-tag">#지분대출</span>
             <span class="product-tag">#임대보증금반환</span>
@@ -291,7 +291,7 @@
             <li>대환대출한도, 대환대출금리, 채무통합·연체해결 전략</li>
             <li>대부대환대출, 대부대출대환과 온투업대출 비교</li>
           </ul>
-          <div class="product-card__tags">
+          <div class="product-card__tags visually-hidden">
             <span>#후순위주담대</span>
             <span>#후순위담보대출</span>
             <span>#후순위주담대한도</span>
