--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>후추 | 온투업 대출상품정보 (베타)</title>
-  <meta name="description" content="아파트, 빌라, 단독주택, 토지·임야, 상가 등 담보 유형별 온투업(P2P) 대출상품 정보를 정리한 베타 페이지입니다. 후순위주담대, 지분대출, 경락잔금대출, 대환대출 구조를 한 눈에 확인하세요.">
+  <meta name="description" content="아파트, 빌라, 단독주택, 토지·임야, 상가 등 담보 유형별 온투업(P2P) 대출 상품 정보 입니다. 유형별 후순위주담대, 지분대출, 경락잔금대출, 대환대출 조건을 한 번에 확인하세요.">
   <!-- 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
 
@@ -37,11 +37,11 @@
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/products/">온투업 대출상품정보(정식)</a>
+          <a class="beta-menu-link" href="/products/">온투업 대출상품</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
+          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
         </div>
       </div>
     </div>
@@ -53,11 +53,10 @@
       <h1 class="products-hero__title">온투업 대출상품정보 (베타)</h1>
       <p class="products-hero__desc">
         아파트, 빌라/연립주택, 단독주택/다가구, 토지·임야, 상가/근린생활시설까지
-        담보 유형별 <strong>온투업(P2P) 담보대출</strong> 구조를 한 곳에 정리한 베타 페이지입니다.
+        담보 유형별 <strong>온투업(P2P) 담보대출</strong> 대출 상품 정보 입니다. 
         <br />
-        #아파트담보대출 #빌라담보대출 #단독주택담보대출 #토지담보대출 #임야대출
-        #후순위주담대 #지분대출 #경락잔금대출 #대환대출
-      </p>
+        유형별 후순위주담대, 지분대출, 경락잔금대출, 대환대출 조건을 한 번에 확인하세요.
+       </p>
     </section>
 
     <!-- 상품 카드 섹션 -->
