--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -70,7 +70,7 @@
           <h2 class="product-card__title">아파트담보대출</h2>
           <p class="product-card__desc">
             아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
+            임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
           </p>
 
           <!-- 해시태그 영역 -->
@@ -115,7 +115,7 @@
           <h3 class="product-card__title">빌라·연립 담보대출</h3>
           <p class="product-card__desc">
             빌라·연립을 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            임대보증금반환대출, 대부업대환대출 구조를 실제 온투업 사례 기준으로 정리합니다.
+            임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
           </p>
 
           <!-- 해시태그 -->
@@ -161,7 +161,7 @@
           <p class="product-card__desc">
             대지와 건물 구조가 복잡한 단독·다가구주택을 담보로 한
             일반담보대출, 지분담보대출, 경락잔금대출, 임대보증금반환대출,
-            대부업대환대출 구조를 정리합니다.
+            대부업대환대출 상품 정보를 확인해 보세요.
           </p>
 
           <!-- 해시태그 -->
@@ -202,8 +202,7 @@
           <h3 class="product-card__title">토지담보대출 · 임야담보대출</h3>
           <p class="product-card__desc">
             토지·임야를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            대부업대환대출 구조와 개발계획, 지목, 용도지역에 따라
-            LTV가 어떻게 달라지는지 정리합니다.
+            대부업대환대출 상품 정보를 확인해 보세요.
           </p>
 
           <!-- 해시태그 -->
@@ -240,7 +239,7 @@
           <h3 class="product-card__title">상가·사무실 담보대출 (근린생활시설)</h3>
           <p class="product-card__desc">
             근린생활시설, 상가, 사무실을 담보로 한 일반담보대출, 지분담보대출,
-            경락잔금대출, 임대보증금반환대출, 대부업대환대출 구조를 정리합니다.
+            경락잔금대출, 임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
           </p>
 
           <!-- 해시태그 -->
