--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -67,7 +67,7 @@
 
         <!-- 카드 1: 아파트담보대출 -->
         <article class="product-card">
-          <h2 class="product-card__title">아파트담보대출</h2>
+          <h2 class="product-card__title">아파트</h2>
           <p class="product-card__desc">
             아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
             임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
@@ -112,7 +112,7 @@
 
         <!-- 카드 2: 빌라·연립 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">빌라·연립 담보대출</h3>
+          <h3 class="product-card__title">빌라·연립주택</h3>
           <p class="product-card__desc">
             빌라·연립을 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
             임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
@@ -127,37 +127,9 @@
             <span class="product-tag">#빌라대출금리</span>
             <span class="product-tag">#빌라대출한도</span>
             <span class="product-tag">#연립대출</span>
-            <span class="product-tag">#연립담보대출</span>
-            <span class="product-tag">#연립지분대출</span>
-            <span class="product-tag">#연립주담대</span>
-            <span class="product-tag">#임대보증금반환</span>
-            <span class="product-tag">#전세보증금반환</span>
-            <span class="product-tag">#임차보증금반환</span>
-          </div>
-
-          <!-- 버튼들 -->
-          <div class="product-card__buttons">
-            <a href="/beta/products/villa-general.html" class="product-btn">
-              일반담보대출 &gt;
-            </a>
-            <a href="/beta/products/villa-share.html" class="product-btn">
-              지분담보대출 &gt;
-            </a>
-            <a href="/beta/products/villa-auction.html" class="product-btn">
-              경락잔금대출 &gt;
-            </a>
-            <a href="/beta/products/villa-deposit-return.html" class="product-btn">
-              임대보증금반환대출 &gt;
-            </a>
-            <a href="/beta/products/villa-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
-            </a>
-          </div>
-        </article>
-
-        <!-- 카드 3: 단독·다가구 담보대출 -->
+            <s택·다가구주택 -->
         <article class="product-card">
-          <h3 class="product-card__title">단독주택·다가구주택 담보대출</h3>
+          <h3 class="product-card__title">단독주택·다가구주택</h3>
           <p class="product-card__desc">
             대지와 건물 구조가 복잡한 단독·다가구주택을 담보로 한
             일반담보대출, 지분담보대출, 경락잔금대출, 임대보증금반환대출,
@@ -197,9 +169,9 @@
           </div>
         </article>
 
-        <!-- 카드 4: 토지·임야 담보대출 -->
+        <!-- 카드 4: 토지·임야 -->
         <article class="product-card">
-          <h3 class="product-card__title">토지담보대출 · 임야담보대출</h3>
+          <h3 class="product-card__title">토지담보대출 · 임야</h3>
           <p class="product-card__desc">
             토지·임야를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
             대부업대환대출 상품 정보를 확인해 보세요.
@@ -234,9 +206,9 @@
           </div>
         </article>
 
-        <!-- 카드 5: 상가·근생 담보대출 -->
+        <!-- 카드 5: 상가·근린생활시설 -->
         <article class="product-card">
-          <h3 class="product-card__title">상가·사무실 담보대출 (근린생활시설)</h3>
+          <h3 class="product-card__title">상가·근린생활시설</h3>
           <p class="product-card__desc">
             근린생활시설, 상가, 사무실을 담보로 한 일반담보대출, 지분담보대출,
             경락잔금대출, 임대보증금반환대출, 대부업대환대출 상품 정보를 확인해 보세요.
