--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>후추 | 온투업 대출상품정보 (베타)</title>
+  <title>후추 | 온투업 대출상품정보</title>
   <meta name="description" content="아파트, 빌라, 단독주택, 토지·임야, 상가 등 담보 유형별 온투업(P2P) 대출 상품 정보 입니다. 유형별 후순위주담대, 지분대출, 경락잔금대출, 대환대출 조건을 한 번에 확인하세요.">
   <!-- 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
