--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -94,19 +94,19 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/apt-general.html" class="product-btn">
-              일반담보대출 &gt;
+              일반담보대출 〉
             </a>
             <a href="/beta/products/apt-share.html" class="product-btn">
-              지분담보대출 &gt;
+              지분담보대출 〉
             </a>
             <a href="/beta/products/apt-auction.html" class="product-btn">
-              경락잔금대출 &gt;
+              경락잔금대출 〉
             </a>
             <a href="/beta/products/apt-deposit-return.html" class="product-btn">
-              임대보증금반환대출 &gt;
+              임대보증금반환대출 〉
             </a>
             <a href="/beta/products/apt-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
+              대부업대환대출 〉
             </a>
           </div>
         </article>
@@ -139,19 +139,19 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/villa-general.html" class="product-btn">
-              일반담보대출 &gt;
+              일반담보대출 〉
             </a>
             <a href="/beta/products/villa-share.html" class="product-btn">
-              지분담보대출 &gt;
+              지분담보대출 〉
             </a>
             <a href="/beta/products/villa-auction.html" class="product-btn">
-              경락잔금대출 &gt;
+              경락잔금대출 〉
             </a>
             <a href="/beta/products/villa-deposit-return.html" class="product-btn">
-              임대보증금반환대출 &gt;
+              임대보증금반환대출 〉
             </a>
             <a href="/beta/products/villa-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
+              대부업대환대출 〉
             </a>
           </div>
         </article>
@@ -181,19 +181,19 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/detached-general.html" class="product-btn">
-              일반담보대출 &gt;
+              일반담보대출 〉
             </a>
             <a href="/beta/products/detached-share.html" class="product-btn">
-              지분담보대출 &gt;
+              지분담보대출 〉
             </a>
             <a href="/beta/products/detached-auction.html" class="product-btn">
-              경락잔금대출 &gt;
+              경락잔금대출 〉
             </a>
             <a href="/beta/products/detached-deposit-return.html" class="product-btn">
-              임대보증금반환대출 &gt;
+              임대보증금반환대출 〉
             </a>
             <a href="/beta/products/detached-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
+              대부업대환대출 〉
             </a>
           </div>
         </article>
@@ -219,19 +219,19 @@
             <span class="product-tag">#대부대환대출</span>
           </div>
 
-          <!-- 버튼들 (임대보증금반환대출은 제외: 네가 정의한 4종 구조) -->
+          <!-- 버튼들 (임대보증금반환대출은 제외) -->
           <div class="product-card__buttons">
             <a href="/beta/products/land-forest-general.html" class="product-btn">
-              일반담보대출 &gt;
+              일반담보대출 〉
             </a>
             <a href="/beta/products/land-forest-share.html" class="product-btn">
-              지분담보대출 &gt;
+              지분담보대출 〉
             </a>
             <a href="/beta/products/land-forest-auction.html" class="product-btn">
-              경락잔금대출 &gt;
+              경락잔금대출 〉
             </a>
             <a href="/beta/products/land-forest-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
+              대부업대환대출 〉
             </a>
           </div>
         </article>
@@ -258,57 +258,59 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/commercial-general.html" class="product-btn">
-              일반담보대출 &gt;
+              일반담보대출 〉
             </a>
             <a href="/beta/products/commercial-share.html" class="product-btn">
-              지분담보대출 &gt;
+              지분담보대출 〉
             </a>
             <a href="/beta/products/commercial-auction.html" class="product-btn">
-              경락잔금대출 &gt;
+              경락잔금대출 〉
             </a>
             <a href="/beta/products/commercial-deposit-return.html" class="product-btn">
-              임대보증금반환대출 &gt;
+              임대보증금반환대출 〉
             </a>
             <a href="/beta/products/commercial-highrate-refi.html" class="product-btn">
-              대부업대환대출 &gt;
+              대부업대환대출 〉
             </a>
           </div>
         </article>
 
-        <!-- 카드 6: 후순위·경락·대환 -->
-        <article class="product-card">
-          <h3 class="product-card__title">
-            후순위주담대 · 경락잔금대출 · 대환대출
-          </h3>
-          <p class="product-card__desc">
-            기존 주담대 이후 추가로 자금이 필요한 경우 활용하는
-            <strong>후순위주담대, 후순위담보대출, 경락잔금대출, 대환대출</strong>을 한 번에 정리합니다.
-            <strong>후순위주담대한도, 후순위대출금리, 경락잔금대출한도·금리</strong> 개념을
-            실제 온투업 사례와 함께 설명합니다.
-          </p>
-          <ul class="product-card__bullets">
-            <li>경락대출한도, 경락잔금대출금리, P2P주담대규제 정리</li>
-            <li>대환대출한도, 대환대출금리, 채무통합·연체해결 전략</li>
-            <li>대부대환대출, 대부대출대환과 온투업대출 비교</li>
-          </ul>
-          <div class="product-card__tags visually-hidden">
-            <span>#후순위주담대</span>
-            <span>#후순위담보대출</span>
-            <span>#후순위주담대한도</span>
-            <span>#후순위대출금리</span>
-            <span>#후순위주담대금리</span>
-            <span>#경락잔금대출</span>
-            <span>#경락대출한도</span>
-            <span>#경락잔금대출한도</span>
-            <span>#경락잔금대출금리</span>
-            <span>#대환대출</span>
-            <span>#대환대출한도</span>
-            <span>#대환대출금리</span>
-          </div>
-          <a href="/beta/products/subsequent-refi-auction.html" class="product-card__link">
-            후순위·경락·대환 상품 (베타) 자세히 보기
-          </a>
-        </article>
+        <!-- 6번 영역: 담보대출 계산기 + 블로그 바로가기 카드 -->
+        <div class="calculator-section-grid">
+          <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+          <article class="product-info-card calculator-card">
+            <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+            <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
+            <ul>
+              <li>개인정보 입력 <strong>NO</strong></li>
+              <li>신용점수영향 <strong>NO</strong></li>
+              <li>간단한 정보로도 <strong>OK</strong></li>
+              <li class="calculator-last-li">
+                <span>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</span>
+                <div class="product-card__buttons">
+                  <a href="/" class="product-btn product-btn--calculator">바로가기</a>
+                </div>
+              </li>
+            </ul>
+          </article>
+
+          <!-- 오른쪽: 실제 대출 사례(네이버 블로그) 안내 -->
+          <article class="product-info-card calculator-extra-card">
+            <h2 class="products-section__title">실제 대출 사례를 확인하세요.</h2>
+            <h3 class="calculator-extra-subtitle">온투업의 다양한 대출 사례 확인 가능</h3>
+
+            <div class="calculator-last-line">
+              <p class="calculator-extra-text">
+                후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
+                나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
+              </p>
+              <div class="product-card__buttons">
+                <!-- TODO: 실제 블로그 주소로 교체 -->
+                <a href="#" class="product-btn">바로가기</a>
+              </div>
+            </div>
+          </article>
+        </div>
 
       </section>
     </section>
