--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>후추 | 온투업 대출상품정보 (베타)</title>
+  <title>후추 | 온투업 대출상품정보</title>
   <meta name="description" content="아파트, 빌라, 단독주택, 토지·임야, 상가 등 담보 유형별 온투업(P2P) 대출상품 정보를 정리한 베타 페이지입니다. 후순위주담대, 지분대출, 경락잔금대출, 대환대출 구조를 한 눈에 확인하세요.">
   <!-- 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
@@ -50,10 +50,10 @@
   <main class="products-main">
     <!-- 히어로 인트로 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">온투업 대출상품정보 (베타)</h1>
+      <h1 class="products-hero__title">온투업 대출상품정보</h1>
       <p class="products-hero__desc">
         아파트, 빌라/연립주택, 단독주택/다가구, 토지·임야, 상가/근린생활시설까지
-        담보 유형별 <strong>온투업(P2P) 담보대출</strong> 구조를 한 곳에 정리한 베타 페이지입니다.
+        담보 유형별 <strong>온투업(P2P) 담보대출</strong> 상품 정보를 확인 할 수 있습니다.
         <br />
         #아파트담보대출 #빌라담보대출 #단독주택담보대출 #토지담보대출 #임야대출
         #후순위주담대 #지분대출 #경락잔금대출 #대환대출
@@ -139,19 +139,19 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/villa-general.html" class="product-btn">
-              일반담보대출 〉
+              일반담보대출  〉
             </a>
             <a href="/beta/products/villa-share.html" class="product-btn">
-              지분담보대출 〉
+              지분담보대출  〉
             </a>
             <a href="/beta/products/villa-auction.html" class="product-btn">
-              경락잔금대출 〉
+              경락잔금대출  〉
             </a>
             <a href="/beta/products/villa-deposit-return.html" class="product-btn">
-              임대보증금반환대출 〉
+              임대보증금반환대출  〉
             </a>
             <a href="/beta/products/villa-highrate-refi.html" class="product-btn">
-              대부업대환대출 〉
+              대부업대환대출  〉
             </a>
           </div>
         </article>
