--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -54,9 +54,10 @@
       <p class="products-hero__desc">
         아파트, 빌라/연립주택, 단독주택/다가구, 토지·임야, 상가/근린생활시설까지
         담보 유형별 <strong>온투업(P2P) 담보대출</strong> 상품 정보를 확인 할 수 있습니다.
+
+        정확한 한도 등 대출조건은 해당 온투업사에 직접 문의하세요.
         <br />
-        #아파트담보대출 #빌라담보대출 #단독주택담보대출 #토지담보대출 #임야대출
-        #후순위주담대 #지분대출 #경락잔금대출 #대환대출
+        
       </p>
     </section>
 
