--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -50,9 +50,9 @@
   <main class="products-main">
     <!-- 히어로 인트로 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">온투업 대출상품정보</h1>
+      <h1 class="products-hero__title">온라인투자연계금융업 대출상품정보</h1>
       <p class="products-hero__desc">
-        아파트, 빌라/연립주택, 단독주택/다가구, 토지·임야, 상가/근린생활시설까지
+        아파트, 빌라/연립, 단독/다가구, 토지·임야, 상가/근린생활시설까지
         담보 유형별 <strong>온투업(P2P) 담보대출</strong> 상품 정보를 확인 할 수 있습니다.
 
         정확한 한도 등 대출조건은 해당 온투업사에 직접 문의하세요.
