--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -55,23 +55,22 @@
     온투업(P2P)의 대출 상품 정보를 확인해보세요.
   </p>
   <p class="products-hero__note">
-    정확한 한도 등 대출조건은 해당 온투업사에 직접 문의하세요.
+    정확한 대출조건은 해당 대출기관에 직접 문의하세요.
   </p>
 </section>
 
 
     <!-- 상품 카드 섹션 -->
     <section class="products-section">
-      <h2 class="products-section__title">부동산 유형별 온투업 대출상품</h2>
+      <h2 class="products-section__title">부동산 담보대출</h2>
 
       <section class="product-hub">
 
         <!-- 카드 1: 아파트담보대출 -->
         <article class="product-card">
-          <h2 class="product-card__title">아파트담보대출</h2>
+          <h2 class="product-card__title">아파트</h2>
           <p class="product-card__desc">
-            아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
+            아파트를 담보로 한 각종 상품 정보를 확인해보세요.
           </p>
 
           <!-- 해시태그 영역 (화면에서는 숨김, SEO용) -->
@@ -113,10 +112,9 @@
 
         <!-- 카드 2: 빌라·연립 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">빌라·연립 담보대출</h3>
+          <h3 class="product-card__title">빌라 · 연립주택</h3>
           <p class="product-card__desc">
-            빌라·연립을 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            임대보증금반환대출, 대부업대환대출 구조를 실제 온투업 사례 기준으로 정리합니다.
+             빌라·연립주택을 담보로 한 각종 상품 정보를 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -158,11 +156,9 @@
 
         <!-- 카드 3: 단독·다가구 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">단독주택·다가구주택 담보대출</h3>
+          <h3 class="product-card__title">단독주택 · 다가구주택</h3>
           <p class="product-card__desc">
-            대지와 건물 구조가 복잡한 단독·다가구주택을 담보로 한
-            일반담보대출, 지분담보대출, 경락잔금대출, 임대보증금반환대출,
-            대부업대환대출 구조를 정리합니다.
+            단독주택·다가구주택을 담보로 한 각종 상품 정보를 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -200,11 +196,9 @@
 
         <!-- 카드 4: 토지·임야 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">토지담보대출 · 임야담보대출</h3>
+          <h3 class="product-card__title">토지 · 임야</h3>
           <p class="product-card__desc">
-            토지·임야를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-            대부업대환대출 구조와 개발계획, 지목, 용도지역에 따라
-            LTV가 어떻게 달라지는지 정리합니다.
+            토지·임야를 담보로 한 각종 상품 정보를 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -238,10 +232,9 @@
 
         <!-- 카드 5: 상가·근생 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">상가·사무실 담보대출 (근린생활시설)</h3>
+          <h3 class="product-card__title">근린생활시설</h3>
           <p class="product-card__desc">
-            근린생활시설, 상가, 사무실을 담보로 한 일반담보대출, 지분담보대출,
-            경락잔금대출, 임대보증금반환대출, 대부업대환대출 구조를 정리합니다.
+            근린생활시설(상가)을 담보로 한 각종 상품 정보를 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
