--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -308,35 +308,42 @@
       </section>
     </section>
 
-    <!-- 하단 안내 카드 -->
+       <!-- 3. 자주 묻는 질문 (FAQ) -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">온투업(P2P) 대출, 먼저 이것만은 확인하세요</h2>
+      <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
-          <h3>온투업대출 · P2P주담대란?</h3>
+          <h3>Q. 담보대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            온투업대출, P2P주담대는 은행·저축은행 대신
-            투자자의 자금으로 이루어지는 <strong>온라인투자연계 금융</strong>입니다.
-            <strong>주택담보대출규제</strong>에 막힌 후순위주담대, DSR미적용 상품을
-            활용하기 전에, 원금 손실 가능성과 연체 시 구조를 반드시 확인해야 합니다.
+            대출 한도는 <strong>기준시세 × LTV − 선순위 채권액</strong>으로 계산됩니다.
+          </p>
+          <p>
+            기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
+            보통 아파트의 경우는 KB시세를, 빌라/연립의 경우 하우스머치가 적용됩니다.
+          </p>
+          <p>
+            그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
           </p>
         </article>
+
         <article class="product-info-card">
-          <h3>대부업대출 vs 온투업대출</h3>
+          <h3>Q. 연체이력, 세금체납 이력이 있어도 대출이 가능한가요?</h3>
           <p>
-            같은 담보대출이라도 <strong>대부업대출금리</strong>와
-            온투업대출 금리는 차이가 있습니다.
-            단순히 금리만 비교하지 말고,
-            <strong>중도상환수수료, 연체 이자, 채무통합 가능 여부</strong>까지 함께 보셔야 합니다.
+            네. 가능한 온투업체가 있습니다.
+          </p>
+          <p>
+            단, 금리·플랫폼수수료 등 조건이 차등 적용될 수 있습니다.
           </p>
         </article>
+
         <article class="product-info-card">
-          <h3>담보대출계산기와 함께 확인하세요</h3>
+          <h3>Q. 후추의 담보대출 계산기는 얼마나 정확한가요?</h3>
           <p>
-            후추의 <strong>담보대출계산기</strong>를 통해
-            LTV, 추가한도, 후순위주담대한도 등을 미리 계산해보고,
-            필요하다면 <strong>경락잔금대출, 대부대환대출, 임대보증금반환</strong> 등
-            목적에 맞는 상품을 선택해야 합니다.
+            온투업에서 실제 취급했던 담보대출 정보를 기반으로 계산되기 때문에 <strong>대출 가능·불가능에 대한 결과는 90% 이상</strong> 정확하여
+            불필요한 상담을 피할 수 있습니다.
+          </p>
+          <p>
+             또한 개인정보를 입력하지 않으므로 유출에 대한 걱정이 없으며, 간단한 정보만으로도 편리하게 이용하실 수 있습니다.
           </p>
         </article>
       </div>
