--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -50,12 +50,15 @@
   <main class="products-main">
     <!-- 히어로 인트로 -->
    <section class="products-hero">
-  <h1 class="products-hero__title">온라인투자연계금융업 대출상품정보</h1>
+  <h1 class="products-hero__title">온라인투자연계금융업 대출상품 정보</h1>
   <p class="products-hero__desc">
-    온투업(P2P)의 대출 상품 정보를 확인해보세요.
+    온투업(P2P)에서 취급중인 대출상품을 확인해보세요.
   </p>
   <p class="products-hero__note">
     정확한 대출조건은 해당 대출기관에 직접 문의하세요.
+  </p>
+  <p class="products-hero__note">
+    후추 담보대출계산기는 개인정보를 입력하지 않아도, 49개 온투업체 중 맞춤 온투업체 확인이 가능합니다.
   </p>
 </section>
 
